# joust

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  pyproject.toml
plans/: backlog.md
src/joust/: backtest.py  buchholz.py  constants.py  dto.py  factories.py  predictor.py  seeding.py  simulator.py  tournament.py  utils.py
src/joust/features/: __init__.py  base.py  elo.py  h2h.py  maps.py  player_performance.py  roster.py
tests/: test_integration.py  test_valve_buchholz.py
